# docs/swagger.yaml
@@ -13,9 +13,12 @@ definitions:
         items:
           $ref: '#/definitions/types.Plan'
         type: array
+      start_date:
+        description: 시작 날짜, 시간 포인터 타입
+        type: string
       total_time:
         description: 총 시간, 포인터 타입
-        type: integer
+        type: string
     type: object
   types.Place:
     properties:
@@ -63,15 +66,25 @@ definitions:
       area_code:
         description: 지역 코드
         type: string
-      end_time:
-        type: string
-      interests:
-        description: 관심사
+      categories:
+        description: 카테고리
         items:
           type: string
         type: array
+      end_date:
+        type: string
+      end_time:
+        type: string
+      start_date:
+        description: 시작 날짜
+        type: string
       start_time:
-        description: '여행 시작 시간 (예: "10:00")'
+        description: 시작 시간
+        type: string
+      total_time:
+        type: string
+      with:
+        description: 누구와
         type: string
     type: object
   util.ResponseDTO:
